--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "p": "prettier --write ."
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.6",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.4",
+    "element-plus": "^2.2.11",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -24,10 +29,15 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "less-loader": "^11.0.0",
+    "normalize.css": "^8.0.1",
+    "prettier": "^2.7.1",
+    "typescript": "~4.5.5",
+    "unplugin-auto-import": "^0.10.3",
+    "unplugin-icons": "^0.14.8",
+    "unplugin-vue-components": "^0.21.2"
   }
 }
